Fixed card-box height and responsive text alignment
Fixed card-box height and responsive text alignment
Added a fixed height
Added display: flex
Added Align and Justify-self: center

--- a/css/index.css
+++ b/css/index.css
@@ -58,6 +58,17 @@ a:hover {
   transition: all 500ms ease-in-out;
 }
 
+.card-body {
+  display: flex;
+  height: 115px
+}
+
+.card-title {
+  display: flex;
+  align-self: center;
+  justify-self: center;
+}
+
 /*
 .content {
   margin-top: 120px;
